Creating service for delete user in database!!
