# backend/docs/specs/swagger.yaml
@@ -34,6 +34,41 @@ definitions:
     - password
     - phone_number
     type: object
+  domain.UpdateUser:
+    properties:
+      address:
+        type: string
+      birth_date:
+        type: string
+      cpf:
+        type: string
+      email:
+        maxLength: 50
+        minLength: 2
+        type: string
+      gender:
+        type: string
+      name:
+        example: john
+        maxLength: 70
+        minLength: 2
+        type: string
+      password:
+        maxLength: 15
+        minLength: 5
+        type: string
+      phone_number:
+        type: string
+    required:
+    - address
+    - birth_date
+    - cpf
+    - email
+    - gender
+    - name
+    - password
+    - phone_number
+    type: object
   domain.User:
     properties:
       address:
@@ -86,6 +121,30 @@ paths:
       tags:
       - user
   /v1/user/{user_id}:
+    delete:
+      parameters:
+      - description: ID of the user
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Delete user by ID.
+      tags:
+      - user
     get:
       parameters:
       - description: ID of the user
@@ -124,7 +183,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/domain.CreateUser'
+          $ref: '#/definitions/domain.UpdateUser'
       produces:
       - application/json
       responses:
